# Pipeline-for-optical-mapping-

./: .gitignore  Dockerfile  INSTALL.md  README.md  compare_samples.py  ingest_samples.py  install_optimap_dev.sh  pyproject.toml  requirements.txt  run_004A_apd.py  run_004A_v37.py  run_apd_demo.py  run_cardiac.sh  run_pipeline_000A_zero.py  test_alternans_smoke.py  test_apd_smoke.py  test_consensus_agent_cli.py  test_cv_smoke.py  test_loader_smoke.py  test_preprocess_smoke.py  viz_004A_apd.py  viz_004A_v37.py  viz_mask.py
config/: default.yaml
data/004A/: 2026-05-08-mSHAM-bs2-6Hz-0508-004A.gsh  2026-05-08-mSHAM-bs2-6Hz-0508-004A.rsh  2026-05-08-mSHAM-bs2-6Hz-0508-004A.rsm
data/test_sideline_long/: test_sideline_long_metadata.json
docs/archive/: PIPELINE_MASTER_REVIEW.md  PIPELINE_REVIEW_session4.md  PIPELINE_STRUCTURE.md  Pipeline_Organization_Proposal.md  README.md  REVIEW_GUIDE.md  base_agent_v1_draft.py
docs/review/: CONSISTENCY_REPORT_agents_v1.md
src/cardiac_pipeline/: __init__.py  base_agent.py  cli.py  constants.py  driver.py  models.py  stages.py
src/cardiac_pipeline/agents/: __init__.py  activation_agent.py  alternans_agent.py  apd_agent.py  cleaning_agent.py  conduction_agent.py  conduction_consensus_agent.py  ingest_agent.py  loader_agent.py  mask_agent.py  peak_detector_agent.py  post_pacing_agent.py  report_agent.py  sideline_agent.py  stim_extract_agent.py
tests/: test_activation.py  test_apd.py  test_detect_beats.py  test_multi_trace.py
tracking/: FIX_TRACKER.md  MODULE_STATUS.md  PROGRESS_TRACKER.md  REVIEW_LOG.md
(+12 files in other folders)
